--- a/website/src/components/sub-components/quizzes/quizzes.css
+++ b/website/src/components/sub-components/quizzes/quizzes.css
@@ -55,21 +55,25 @@
 
 #quizzes .questions {
     width: 100%;
-    background-color: var(--text);
+    /* background-color: var(--text); */
     flex: 1;
     padding: 10px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: var(--text);
+
 }
 
 .questions ul {
     width: 90%;
-    height: 365px;
+    height: 300px;
     overflow-y: scroll;
-    gap: 10px;
+    gap: 20px;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
+    border: 2px solid var(--light);
     
 }
 
@@ -77,6 +81,9 @@
     background-color: var(--light);
     padding: 10px;
     border-radius: 10px;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .questions ul li p p {
@@ -92,6 +99,8 @@
     background-color: #ccc;
     padding: 10px;
     display: block;
+    /* color: var(--light); */
+
 }
 .questions ul li .q {
     overflow-wrap: break-word;
