--- a/website/src/components/main-section/sub-main/sub-main.css
+++ b/website/src/components/main-section/sub-main/sub-main.css
@@ -1,14 +1,134 @@
+.react-logo {
+  animation: rotating infinite linear 3s 0s;
+}
+
+.react-logo:hover {
+  animation-play-state: paused;
+  cursor: pointer;
+}
+
+@keyframes rotating {
+  from {
+    transform:rotate(0deg)
+  }
+  to {
+    transform:rotate(360deg)
+  }
+}
 .sub-main {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  /* width: 100%; */
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.sub-main .content {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height:calc (100% - 80px);
+}
+
+.content section {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  /* flex-direction: column; */
+  padding: 20px;
+  gap: 20px;
+}
+
+.content section .mainTabs {
+  display: flex;
+  /* flex-direction: column; */
+  gap: 10px;
+  flex: 1;
+}
+.content section .mainTabs > ul {
+  display: flex;
+  gap: 20px 10px;
+  flex-wrap: wrap;
+  position: relative;
+  height: max-content;
+  width: min-content;
+  justify-content: space-around;
+  flex: 1;
+}
+
+.content section .mainTabs > ul > li > a {
+  background-color: var(--text);
+  background-image: linear-gradient(to right, var(--gradient));
+  color: var(--light);
+  padding: 10px;
+  border-radius: 0 15px;
+  box-shadow: 0 0 10px #000;
+  display: block;
+}
+
+.mainTabs > ul > li a.active {
+  background: none !important;
+  box-shadow: none !important;
+  color: var(--active) !important;
+}
+
+.subTabs {
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  /* background-color: var(--dark); */
+  color: var(--active);
+  left: 0;
+  top: calc(100% + 10px);
+  /* min-width: 100px; */
+  min-width: min-content;
+  max-width: 100%;
+  height: max-content;
+  padding: 10px 0;
+  border-radius: 10px;
+  gap: 10px;
+  display: flex;
 }
 
 
-.sub-main .content {
-    width: 100%;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.subTabs > li > a {
+ background-color: var(--text);
+  background-image: linear-gradient(to right, var(--gradient));
+  color: var(--light);
+  padding: 10px;
+  border-radius: 0 15px;
+  box-shadow: 0 0 10px #000;
+  display: block;
+
+}
+
+.content 
+ .sub-content {
+  flex: 2;
+  background-image: linear-gradient(to bottom, var(--gradient));
+  border-radius: 10px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.content  .sub-content .container {
+  height: 90%;
+  width: 100%;
+  height: 420px;
+  overflow-y: scroll;
+  text-overflow: ellipsis;
+  color: var(--light);
+}
+
+.content  .sub-content .container::-webkit-scrollbar {
+  background-color: transparent;
+  width: 5px;
+}
+
+.content  .sub-content .container::-webkit-scrollbar-thumb {
+  background-color: var(--light);
 }
