--- a/website/src/components/side/side.css
+++ b/website/src/components/side/side.css
@@ -1,32 +1,27 @@
 aside {
-    background-color: var(--text);
-    color: var(--light);
-    height: 100%;
-    border-right: 1px solid var(--light);
+  background-color: var(--text);
+  background-image: linear-gradient(to bottom, var(--gradient));
+  color: var(--light);
+  height: 100%;
+  /* border-right: 1px solid var(--light); */
 }
-
 
 aside .tools {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
 }
 
-
-aside .tools li  {
-    padding: 20px 10px;
-    margin-bottom: 10px;
-    text-align: center;
+aside .tools li {
+  padding: 20px 10px;
+  margin-bottom: 10px;
+  text-align: center;
 }
-
 
 aside .tools li a {
-    box-shadow: 0 0 7px #aaa;
-    color: var(--light);
-    border-radius: 30%;
-    padding: 7px;
+  box-shadow: 0 0 4px #acd;
+  color: var(--light);
+  border-radius: 0 20px 0 20px;
+  padding: 10px;
 }
-
-
-
