--- a/website/src/App.css
+++ b/website/src/App.css
@@ -7,15 +7,16 @@
 }
 
 body {
-  font-size: 17px;
+  font-size: 14px;
   font-family: cursive;
 }
 
 #root {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: minmax(100px,130px) 1fr ;
+  grid-template-columns: 100%;
 }
 
 /* Colors */
