--- a/website/src/components/header/header.css
+++ b/website/src/components/header/header.css
@@ -1,64 +1,63 @@
 header {
-    height:max-content; 
-    height: 120px;
-    padding: 10px;
-    background-color: var(--text);
-    background-image:linear-gradient(to right, var(--gradient));
-    position: relative;
-    /* border-bottom: 1px solid var(--light); */
+  min-height: 100px;
+  max-height: max-content;
+  /* height: 130px; */
+  padding: 10px;
+  background-color: var(--text);
+  background-image: linear-gradient(to right, var(--gradient));
+  position: relative;
 }
 
 header .container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: var(--light);
-    gap: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--light);
+  gap: 20px;
 }
 
-#logo  {
-    font-size: 2rem;
-    border-right: 10px solid var(--light);
-    padding: 20px;
-    border-radius: 0px 50px 50px 0;
+#logo {
+  font-size: 1.5rem;
+  border-right: 10px solid var(--light);
+  padding: 20px;
+  border-radius: 0px 50px 50px 0;
 }
 
 nav {
-    height: 100%;
-    width: max-content;
-    flex: 1;
-    
+  height: 100%;
+  width: max-content;
+  flex: 1;
 }
 
 nav ul {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    height: 100%;
-    flex-wrap: wrap;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  flex-wrap: wrap;
 }
-
 
 nav ul li a {
-    padding: 10px;
-    border-right: 10px solid var(--light);
-    border-radius: 0 30px 30px 0;
-    height: 100%;
-    background-color: #eee1;
-    transition: 0.3s;
+  padding: 10px;
+  border-right: 10px solid var(--light);
+  height: max-content;
+  width: max-content;
+  background-color: #eee1;
+  transition: 0.3s;
+  display: block;
+  border-radius: 0 30px 30px 0;
 }
-
-
 
 nav ul li a.active {
-    color: var(--active);
-    border-color: transparent;
-    background-color: transparent
+  color: var(--active);
+  border-color: transparent;
+  background-color: transparent;
 }
 
-
 nav ul li:last-child a {
-    background-color: transparent;
-    border: none;
+  background-color: transparent;
+  border: none;
 }
