--- a/website/src/components/main-section/main.css
+++ b/website/src/components/main-section/main.css
@@ -1,8 +1,10 @@
 main {
-    flex: 1;
     width: 100%;
     display: flex;
-    height: 100%;
+    grid-area: 2/1/3/2;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: minmax(30px,auto) 1fr;
 }
 
 
