--- a/website/src/components/main-section/sub-main/sub-main.css
+++ b/website/src/components/main-section/sub-main/sub-main.css
@@ -9,52 +9,62 @@
 
 @keyframes rotating {
   from {
-    transform:rotate(0deg)
+    transform: rotate(0deg);
   }
   to {
-    transform:rotate(360deg)
+    transform: rotate(360deg);
   }
 }
 .sub-main {
-  /* width: 100%; */
-  display: flex;
-  flex-direction: column;
-  flex: 1;
+  grid-area: 1/2/1/3;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .sub-main .content {
   width: 100%;
-  flex: 1;
+  flex: 1 1;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height:calc (100% - 80px);
 }
 
 .content section {
   width: 100%;
   height: 100%;
   display: flex;
-  /* flex-direction: column; */
-  padding: 20px;
+  padding: 10px;
   gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .content section .mainTabs {
   display: flex;
-  /* flex-direction: column; */
   gap: 10px;
-  flex: 1;
+  height: 390px;
+  justify-content: center;
+  align-self: center;
 }
+
 .content section .mainTabs > ul {
   display: flex;
   gap: 20px 10px;
   flex-wrap: wrap;
   position: relative;
-  height: max-content;
+  height: 100%;
   width: min-content;
   justify-content: space-around;
   flex: 1;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.content section .mainTabs > ul::-webkit-scrollbar {
+  background-color: transparent;
+  width: 8px;
+}
+.content section .mainTabs > ul::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(var(--gradient));
+  border-radius: 20px;
 }
 
 .content section .mainTabs > ul > li > a {
@@ -74,61 +84,58 @@
 }
 
 .subTabs {
-  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
-  /* background-color: var(--dark); */
   color: var(--active);
-  left: 0;
-  top: calc(100% + 10px);
-  /* min-width: 100px; */
-  min-width: min-content;
-  max-width: 100%;
+  max-width: 500px;
+  margin: auto;
   height: max-content;
-  padding: 10px 0;
+  padding: 10px 20px;
   border-radius: 10px;
-  gap: 10px;
+  gap: 30px;
   display: flex;
+  overflow-x: scroll;
 }
 
-
 .subTabs > li > a {
- background-color: var(--text);
+  background-color: var(--text);
   background-image: linear-gradient(to right, var(--gradient));
   color: var(--light);
   padding: 10px;
   border-radius: 0 15px;
   box-shadow: 0 0 10px #000;
   display: block;
-
 }
 
-.content 
- .sub-content {
-  flex: 2;
+.content .sub-content {
+  flex: 2 1;
   background-image: linear-gradient(to bottom, var(--gradient));
   border-radius: 10px;
-  height: 100%;
+  height: 397px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
 }
 
-.content  .sub-content .container {
-  height: 90%;
+.content .sub-content .container {
+  height: 100%;
   width: 100%;
-  height: 420px;
-  overflow-y: scroll;
   text-overflow: ellipsis;
   color: var(--light);
 }
 
-.content  .sub-content .container::-webkit-scrollbar {
+.content *::-webkit-scrollbar {
   background-color: transparent;
   width: 5px;
+  height: 5px;
 }
 
-.content  .sub-content .container::-webkit-scrollbar-thumb {
-  background-color: var(--light);
+.content *::-webkit-scrollbar-thumb {
+  background-color: var(--active);
+}
+
+.content .sub-content .container .subContent {
+  overflow-y: scroll;
+  max-height: 220px;
 }
