--- a/website/src/components/side/side.css
+++ b/website/src/components/side/side.css
@@ -3,14 +3,32 @@ aside {
   background-image: linear-gradient(to bottom, var(--gradient));
   color: var(--light);
   height: 100%;
-  /* border-right: 1px solid var(--light); */
+  width: max-content;
+  grid-area: 1/1/2/2;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
 }
 
 aside .tools {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  height: 100%;
+  justify-content: space-between;
+  /* min-height: 400px; */
+  max-height: 400px;
+  min-width: 50px;
+  max-width: max-content;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 5px;
+  scroll-behavior: smooth;
+}
+aside .tools::-webkit-scrollbar {
+  background-color: transparent;
+  width: 6px;
+}
+aside .tools::-webkit-scrollbar-thumb {
+  background-color: var(--active);
 }
 
 aside .tools li {
@@ -24,4 +42,5 @@ aside .tools li a {
   color: var(--light);
   border-radius: 0 20px 0 20px;
   padding: 10px;
+  font-size: 10px;
 }
