--- a/website/src/components/sub-components/sla/sla.css
+++ b/website/src/components/sub-components/sla/sla.css
@@ -1,8 +1,8 @@
-#sr {
+#sla {
   flex: 1;
 }
 
-#sr .container {
+#sla .container {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -11,13 +11,13 @@
   position: relative;
 }
 
-#sr form {
+#sla form {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-#sr form input {
+#sla form input {
   padding: 15px;
   width: 50%;
   border: none;
@@ -27,19 +27,19 @@
 }
 
 /* 
-#sr .filter  {
+#sla .filter  {
     display: flex;
     width: max-content;
     border-radius: 10px;
     border: 5px solid var(--text);
 }
-#sr .filter ul {
+#sla .filter ul {
     display: flex;
     gap: 20px;
     
     
 }
-#sr .filter ul li a {
+#sla .filter ul li a {
     background-color: var(--text);
     display: flex;
     padding: 15px;
@@ -47,12 +47,12 @@
     border-radius: 5px;
 }
 
-#sr .filter ul li a.active {
+#sla .filter ul li a.active {
     background-color: transparent;
     color: var(--active);
 } */
 
-#sr .questions {
+#sla .sla {
   width: 100%;
   /* background-color: var(--text); */
   flex: 1;
@@ -64,7 +64,7 @@
   background-image: linear-gradient(to bottom, var(--gradient));
 }
 
-.questions ul {
+.sla ul {
   width: 90%;
   height: 300px;
   overflow-y: scroll;
@@ -75,18 +75,19 @@
   border: 2px solid var(--light);
 }
 
-.questions ul li {
+.sla ul li {
   background-color: var(--light);
 
   padding: 10px;
   border-radius: 10px;
-  min-height: 100%;
+  min-height: max-content;
   display: flex;
   flex-direction: column;
   position: relative;
+
 }
 
-.questions ul li .delete {
+.sla ul li .delete {
   position: absolute;
   right: 10px;
   top: 10px;
@@ -94,7 +95,7 @@
   color: var(--dark);
 }
 
-.questions ul li div p {
+.sla ul li div p {
   background-color: var(--text);
   background-image: linear-gradient(to bottom, var(--gradient));
   width: max-content;
@@ -103,19 +104,24 @@
   border-radius: 10px;
   margin-bottom: 10px;
 }
-.questions ul li div span {
+.sla ul li div span {
   margin-left: 10px;
   background-color: #ccc;
   padding: 10px;
   display: block;
   /* color: var(--light); */
 }
-.questions ul li .q {
+.sla ul li .q {
   overflow-wrap: break-word;
   margin-bottom: 10px;
 }
+.sla ul li .a {
+ display: flex;
+ align-items: center;
+ justify-content: space-between;
+}
 /* 
-.questions ul ol {
+.sla ul ol {
     list-style: Upper-alpha;
     list-style-position: inside;
     display: flex;
@@ -123,24 +129,24 @@
     justify-content: space-around;
 } */
 
-.questions ul ol > li[datatype="true"] {
+.sla ul ol > li[datatype="true"] {
   background-color: rgba(0, 203, 0, 0.627);
   border-radius: 10px;
 }
-.questions ul::-webkit-scrollbar {
+.sla ul::-webkit-scrollbar {
   background-color: transparent;
   width: 10px;
 }
-.questions ul::-webkit-scrollbar-thumb {
+.sla ul::-webkit-scrollbar-thumb {
   background-color: #fff;
 }
 
-.newForm {
+#sla .newForm {
   position: absolute;
   left: 50%;
   top: 50%;
   width: 50% !important;
-  height: 50%;
+  height: max-content;
   transform: translate(-50%, -50%);
   background-color: var(--text);
   background-image: linear-gradient(to bottom, var(--gradient));
